laravel-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
  labels:
    app: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: laravel-app
        image: 911167927672.dkr.ecr.ap-southeast-1.amazonaws.com/book-shop-one:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: laravel-data
          mountPath: /var/www/html/file
      volumes:
        - name: laravel-data
          awsElasticBlockStore:
            volumeID: "vol-06906e03b528c8330" # Replace with your EBS volume ID
            fsType: ext4

---

apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel
  ports:
   - protocol: TCP
     port: 80
     targetPort: 9000
  type: LoadBalancer
