mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-app
        image: mysql:8.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
         - name: mysql-data
           awsElasticBlockStore:
             volumeID: "vol-099028f769c687fa9"
             fsType: ext4

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
   - protocol: TCP
     port: 3306
     targetPort: 3306
  type: ClusterIP
