ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default  # Optional, specify the namespace where your service is running
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: k8s-ingressn-ingressn-5efa1d0ba7-7e8f62e4234422c9.elb.ap-southeast-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-service  # The name of the service to route traffic to
                port:
                  number: 80  # The port of the service to route to
